--- a/index.html
+++ b/index.html
@@ -286,65 +286,116 @@
             <div class="sectionCard d-flex flex-direction-row">
 
                 <article class="cardProducts m-0">
-                    <dic class="article">
+                    <dic class="article1">
 
-                        <input type="checkbox" id="new" class="new">
-                        <label for="new">
+
+                        <label for="new1" class="fadeAway">
                             <img src="img/skull.svg" alt="Skull logo" class="skull">
                         </label>
-                        <div class="smallCard" id="new">
+                        <input type="checkbox" id="new1" class="new">
+                        <div class="smallCard">
                             <img src="img/pic23.webp" alt="Outfit Image" class="outFit">
                             <p class="price">Outfit.................................$499</p>
-
                         </div>
 
-                        <img src="img/pic23.webp" alt="Outfit Image" class="outFit">
+                        <img src="img/pic23.webp" alt="Outfit Image" id="outFit" class="outFit">
                     </dic>
                 </article>
 
                 <article class="cardProducts m-0">
-                    <dic class="article">
-                        <img src="img/skull.svg" alt="Skull logo" class="skull">
-                        <img src="img/pic28.webp" alt="Outfit Image" class="outFit">
+                    <dic class="article2">
+
+                        <label for="new2" class="fadeAway">
+                            <img src="img/skull.svg" alt="Skull logo" class="skull">
+                        </label>
+                        <input type="checkbox" id="new2" class="new">
+                        <div class="smallCard">
+                            <img src="img/pic28.webp" alt="Outfit Image" class="outFit">
+                            <p class="price">Outfit.................................$499</p>
+                        </div>
+
+                        <img src="img/pic28.webp" alt="Outfit Image"  id="outFit" class="outFit">
                     </dic>
                 </article>
                 <article class="cardProducts m-0">
-                    <dic class="article">
-                        <img src="img/skull.svg" alt="Skull logo" class="skull">
-                        <img src="img/pic29.webp" alt="Outfit Image" class="outFit">
+                    <dic class="article3">
+                        <label for="new3" class="fadeAway">
+                            <img src="img/skull.svg" alt="Skull logo" class="skull">
+                        </label>
+                        <input type="checkbox" id="new3" class="new">
+                        <div class="smallCard">
+                            <img src="img/pic29.webp" alt="Outfit Image" class="outFit">
+                            <p class="price">Outfit.................................$499</p>
+                        </div>
+                        <img src="img/pic29.webp" alt="Outfit Image" id="outFit" class="outFit">
                     </dic>
                 </article>
                 <article class="cardProducts m-0">
-                    <dic class="article">
-                        <img src="img/skull.svg" alt="Skull logo" class="skull">
-                        <img src="img/pic33.webp" alt="Outfit Image" class="outFit">
+                    <dic class="article4">
+                        <label for="new4" class="fadeAway">
+                            <img src="img/skull.svg" alt="Skull logo" class="skull">
+                        </label>
+                        <input type="checkbox" id="new4" class="new">
+                        <div class="smallCard">
+                            <img src="img/pic33.webp" alt="Outfit Image" class="outFit">
+                            <p class="price">Outfit.................................$499</p>
+                        </div>
+                        <img src="img/pic33.webp" alt="Outfit Image" id="outFit" class="outFit">
                     </dic>
                 </article>
             </div>
 
             <div class="sectionCard d-flex flex-direction-row">
                 <article class="cardProducts m-0">
-                    <dic class="article">
-                        <img src="img/skull.svg" alt="Skull logo" class="skull">
-                        <img src="img/pic20.webp" alt="Outfit Image" class="outFit">
+                    <dic class="article5">
+                        <label for="new5" class="fadeAway">
+                            <img src="img/skull.svg" alt="Skull logo" class="skull">
+                        </label>
+                        <input type="checkbox" id="new5" class="new">
+                        <div class="smallCard">
+                            <img src="img/pic20.webp" alt="Outfit Image" class="outFit">
+                            <p class="price">Outfit.................................$499</p>
+                        </div>
+                        <img src="img/pic20.webp" alt="Outfit Image" id="outFit" class="outFit">
                     </dic>
                 </article>
                 <article class="cardProducts m-0">
-                    <dic class="article">
-                        <img src="img/skull.svg" alt="Skull logo" class="skull">
-                        <img src="img/pic17.webp" alt="Outfit Image" class="outFit">
+                    <dic class="article6">
+                        <label for="new6" class="fadeAway">
+                            <img src="img/skull.svg" alt="Skull logo" class="skull">
+                        </label>
+                        <input type="checkbox" id="new6" class="new">
+                        <div class="smallCard">
+                            <img src="img/pic17.webp" alt="Outfit Image" class="outFit">
+                            <p class="price">Outfit.................................$499</p>
+                        </div>
+                        <img src="img/pic17.webp" alt="Outfit Image" id="outFit" class="outFit">
                     </dic>
                 </article>
                 <article class="cardProducts m-0">
-                    <dic class="article">
-                        <img src="img/skull.svg" alt="Skull logo" class="skull">
-                        <img src="img/pic36.webp" alt="Outfit Image" class="outFit">
+                    <dic class="article7">
+                        <label for="new7" class="fadeAway">
+                            <img src="img/skull.svg" alt="Skull logo" class="skull">
+                        </label>
+                        <input type="checkbox" id="new7" class="new">
+                        <div class="smallCard">
+                            <img src="img/pic36.webp" alt="Outfit Image" class="outFit">
+                            <p class="price">Outfit.................................$499</p>
+                        </div>
+                        <img src="img/pic36.webp" alt="Outfit Image" id="outFit" class="outFit">
                     </dic>
                 </article>
                 <article class="cardProducts m-0">
-                    <dic class="article">
-                        <img src="img/skull.svg" alt="Skull logo" class="skull">
-                        <img src="img/pic16.webp" alt="Outfit Image" class="outFit">
+                    <dic class="article8">
+                        <label for="new8" class="fadeAway">
+                            <img src="img/skull.svg" alt="Skull logo" class="skull">
+                        </label>
+                        <input type="checkbox" id="new8" class="new">
+                        <div class="smallCard">
+                            <img src="img/pic16.webp" alt="Outfit Image" class="outFit">
+                            <p class="price">Outfit.................................$499</p>
+                        </div>
+                        <img src="img/pic16.webp" alt="Outfit Image" id="outFit" class="outFit">
                     </dic>
                 </article>
             </div>
