--- a/index.html
+++ b/index.html
@@ -286,117 +286,117 @@
             <div class="sectionCard d-flex flex-direction-row">
 
                 <article class="cardProducts m-0">
-                    <dic class="article1">
+                    <div class="article1">
 
 
                         <label for="new1" class="fadeAway">
                             <img src="img/skull.svg" alt="Skull logo" class="skull">
                         </label>
                         <input type="checkbox" id="new1" class="new">
-                        <div class="smallCard">
+                        <a href="../views/store.html" class="smallCard">
                             <img src="img/pic23.webp" alt="Outfit Image" class="outFit">
                             <p class="price">Outfit.................................$499</p>
-                        </div>
+                        </a>
 
                         <img src="img/pic23.webp" alt="Outfit Image" id="outFit" class="outFit">
-                    </dic>
+                    </div>
                 </article>
 
                 <article class="cardProducts m-0">
-                    <dic class="article2">
+                    <div class="article2">
 
                         <label for="new2" class="fadeAway">
                             <img src="img/skull.svg" alt="Skull logo" class="skull">
                         </label>
                         <input type="checkbox" id="new2" class="new">
-                        <div class="smallCard">
+                        <a href="../views/store.html" class="smallCard">
                             <img src="img/pic28.webp" alt="Outfit Image" class="outFit">
                             <p class="price">Outfit.................................$499</p>
-                        </div>
+                        </a>
 
                         <img src="img/pic28.webp" alt="Outfit Image"  id="outFit" class="outFit">
-                    </dic>
+                    </div>
                 </article>
                 <article class="cardProducts m-0">
-                    <dic class="article3">
+                    <div class="article3">
                         <label for="new3" class="fadeAway">
                             <img src="img/skull.svg" alt="Skull logo" class="skull">
                         </label>
                         <input type="checkbox" id="new3" class="new">
-                        <div class="smallCard">
+                        <a href="../views/store.html"  class="smallCard">
                             <img src="img/pic29.webp" alt="Outfit Image" class="outFit">
                             <p class="price">Outfit.................................$499</p>
-                        </div>
+                        </a>
                         <img src="img/pic29.webp" alt="Outfit Image" id="outFit" class="outFit">
-                    </dic>
+                    </div>
                 </article>
                 <article class="cardProducts m-0">
-                    <dic class="article4">
+                    <div class="article4">
                         <label for="new4" class="fadeAway">
                             <img src="img/skull.svg" alt="Skull logo" class="skull">
                         </label>
                         <input type="checkbox" id="new4" class="new">
-                        <div class="smallCard">
+                        <a href="../views/store.html" class="smallCard">
                             <img src="img/pic33.webp" alt="Outfit Image" class="outFit">
                             <p class="price">Outfit.................................$499</p>
-                        </div>
+                        </a>
                         <img src="img/pic33.webp" alt="Outfit Image" id="outFit" class="outFit">
-                    </dic>
+                    </div>
                 </article>
             </div>
 
             <div class="sectionCard d-flex flex-direction-row">
                 <article class="cardProducts m-0">
-                    <dic class="article5">
+                    <div class="article5">
                         <label for="new5" class="fadeAway">
                             <img src="img/skull.svg" alt="Skull logo" class="skull">
                         </label>
                         <input type="checkbox" id="new5" class="new">
-                        <div class="smallCard">
+                        <a href="../views/store.html" class="smallCard">
                             <img src="img/pic20.webp" alt="Outfit Image" class="outFit">
                             <p class="price">Outfit.................................$499</p>
-                        </div>
+                        </a>
                         <img src="img/pic20.webp" alt="Outfit Image" id="outFit" class="outFit">
-                    </dic>
+                    </div>
                 </article>
                 <article class="cardProducts m-0">
-                    <dic class="article6">
+                    <div class="article6">
                         <label for="new6" class="fadeAway">
                             <img src="img/skull.svg" alt="Skull logo" class="skull">
                         </label>
                         <input type="checkbox" id="new6" class="new">
-                        <div class="smallCard">
+                        <a href="../views/store.html" class="smallCard">
                             <img src="img/pic17.webp" alt="Outfit Image" class="outFit">
                             <p class="price">Outfit.................................$499</p>
-                        </div>
+                        </a>
                         <img src="img/pic17.webp" alt="Outfit Image" id="outFit" class="outFit">
-                    </dic>
+                    </div>
                 </article>
                 <article class="cardProducts m-0">
-                    <dic class="article7">
+                    <div class="article7">
                         <label for="new7" class="fadeAway">
                             <img src="img/skull.svg" alt="Skull logo" class="skull">
                         </label>
                         <input type="checkbox" id="new7" class="new">
-                        <div class="smallCard">
+                        <a href="../views/store.html" class="smallCard">
                             <img src="img/pic36.webp" alt="Outfit Image" class="outFit">
                             <p class="price">Outfit.................................$499</p>
-                        </div>
+                        </a>
                         <img src="img/pic36.webp" alt="Outfit Image" id="outFit" class="outFit">
-                    </dic>
+                    </div>
                 </article>
                 <article class="cardProducts m-0">
-                    <dic class="article8">
+                    <div class="article8">
                         <label for="new8" class="fadeAway">
                             <img src="img/skull.svg" alt="Skull logo" class="skull">
                         </label>
                         <input type="checkbox" id="new8" class="new">
-                        <div class="smallCard">
+                        <div href="../views/store.html" class="smallCard">
                             <img src="img/pic16.webp" alt="Outfit Image" class="outFit">
                             <p class="price">Outfit.................................$499</p>
                         </div>
                         <img src="img/pic16.webp" alt="Outfit Image" id="outFit" class="outFit">
-                    </dic>
+                    </div>
                 </article>
             </div>
             <a href="../views/store.html" class="ctaStore">See more...</a>
