Making Tag GetOff

--- a/index.html
+++ b/index.html
@@ -106,6 +106,14 @@
             <img src="img/laptop1.webp" alt="Laptop Image" class="laptop">
         </section> -->
 
+        <section class="tagGetOff">
+            <a href="index.html#getOff" class="discountGetOff">
+                <article class="discount">
+                    <h2 class="title">Get 25% Off</h2>
+                </article>
+            </a>
+        </section>
+
         <!-- Best Sellers -->
 
         <section class="bestSellers ">
