Update SkullIcon  & ArrowUpIcon

--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
 
         <!-- Hero Section -->
 
-        <section class="heroSection">
+        <section class="heroSection" id="heroSection">
             <div class="heroSectionCentered">
                 <article class="info">
                     <h1 class="break">Break a Leg</h1>
@@ -105,6 +105,37 @@
             </article>
             <img src="img/laptop1.webp" alt="Laptop Image" class="laptop">
         </section> -->
+
+        <!-- ArrowUp -->
+
+        <section class="arrowUp">
+            <a href="index.html#heroSection" class="directionUp">
+                <img src="img/arrowup.svg" alt="" class="arrowUpIcon">
+            </a>
+        </section>
+
+        <!-- Skull SocialMedia -->
+
+        <section class="skullSocialMedia">
+            <article class="socialMedia">
+                <img src="img/skull.svg" alt="" class="skullIcon">
+                <ul>
+                    <li><a href="https://www.instagram.com/" target="_blank" class="item"><img src="img/instagram.svg" alt="" class="itemSocial"></a></li>
+                    <li><a href="https://www.youtube.com/" target="_blank" class="item"><img src="img/youtube.svg" alt="" class="itemSocial"></a></li>
+                    <li><a href="https://www.facebook.com/" target="_blank" class="item"><img src="img/facebook.svg" alt="" class="itemSocial"></a></li>
+                    <li><a href="https://twitter.com/?lang=es" target="_blank" class="item"><img src="img/twitter.svg" alt="" class="itemSocial"></a></li>
+                    <li><a href="https://co.pinterest.com/" target="_blank" class="item"><img src="img/pinterest.svg" alt="" class="itemSocial"></a></li>
+                </ul>
+            </article>
+        </section>
+
+        <section class="tagGetOff">
+            <a href="index.html#getOff" class="discountGetOff">
+                <article class="discount">
+                    <h2 class="title">Get 25% Off</h2>
+                </article>
+            </a>
+        </section>
 
         <section class="tagGetOff">
             <a href="index.html#getOff" class="discountGetOff">
@@ -292,11 +323,8 @@
         <section class="newArrivals" id="newArrivals">
             <h2 class="subtitle">New Arrivals</h2>
             <div class="sectionCard d-flex flex-direction-row">
-
                 <article class="cardProducts m-0">
                     <div class="article1">
-
-
                         <label for="new1" class="fadeAway">
                             <img src="img/skull.svg" alt="Skull logo" class="skull">
                         </label>
@@ -305,14 +333,11 @@
                             <img src="img/pic23.webp" alt="Outfit Image" class="outFit">
                             <p class="price">Outfit.................................$499</p>
                         </a>
-
                         <img src="img/pic23.webp" alt="Outfit Image" id="outFit" class="outFit">
                     </div>
                 </article>
-
                 <article class="cardProducts m-0">
                     <div class="article2">
-
                         <label for="new2" class="fadeAway">
                             <img src="img/skull.svg" alt="Skull logo" class="skull">
                         </label>
@@ -321,7 +346,6 @@
                             <img src="img/pic28.webp" alt="Outfit Image" class="outFit">
                             <p class="price">Outfit.................................$499</p>
                         </a>
-
                         <img src="img/pic28.webp" alt="Outfit Image"  id="outFit" class="outFit">
                     </div>
                 </article>
@@ -352,7 +376,6 @@
                     </div>
                 </article>
             </div>
-
             <div class="sectionCard d-flex flex-direction-row">
                 <article class="cardProducts m-0">
                     <div class="article5">
@@ -408,7 +431,6 @@
                 </article>
             </div>
             <a href="../views/store.html" class="ctaStore">See more...</a>
-
         </section>
 
         <!-- Get 25% Off -->
