--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Jura:wght@300;400;500;600;700&family=Rubik+Distressed&display=swap" rel="stylesheet">
     <!-- Favicon -->
-    <link rel="icon" type="image/svg" href="img/skull.svg" sizes="16x16"/>
-    <link rel="icon" type="image/svg" href="img/skull.svg" sizes="32x32"/>
-    <link rel="icon" type="image/svg" href="img/skull.svg" sizes="64x64"/>
+    <link rel="icon" type="image/svg" href="img/skullLogo.svg" sizes="16x16"/>
+    <link rel="icon" type="image/svg" href="img/skullLogo.svg" sizes="32x32"/>
+    <link rel="icon" type="image/svg" href="img/skullLogo.svg" sizes="64x64"/>
     <!-- Bootstrap -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <!-- Hoja de estilos -->
@@ -35,7 +35,7 @@
             <img class="drawerIcon" src="img/menu_Icon.svg" alt="Menu icon">
         </label>
         <a class="logo" href="index.html">
-            <img class="brand" src="img/skull.svg" alt="Break a Leg brand">
+            <img class="brand" src="img/skullLogo.svg" alt="Break a Leg brand">
         </a>
         <section class="menuIcons">
             <ul>
@@ -47,17 +47,17 @@
         </section>
         <nav class="menuSide">
             <section class="top">
-                <img class="brand" src="img/skull.svg" alt="Break a Leg brand">
+                <img class="brand" src="img/skullLogo.svg" alt="Break a Leg brand">
                 <label for="menuSide">
                     <img class="close" src="img/close_Arrow.svg" alt="Close icon">
                 </label>
             </section>
             <section class="menu">
                 <ul>
-                    <li><a href="../views/sign_In.html" class="link">Sign in</a></li>
-                    <li><a href="../views/my_Cart.html" class="link">My cart</a></li>
+                    <li><a href="views/sign_In.html" class="link">Sign in</a></li>
+                    <li><a href="views/my_Cart.html" class="link">My cart</a></li>
                     <li><a href="index.html" class="link">Home</a></li>
-                    <li><a href="../views/store.html" class="link">Store</a></li>
+                    <li><a href="views/store.html" class="link">Store</a></li>
                     <li><a href="index.html#giftCards" class="link">Gift cards</a></li>
                 </ul>
             </section>
