--- a/index.html
+++ b/index.html
@@ -129,13 +129,7 @@
             </article>
         </section>
 
-        <section class="tagGetOff">
-            <a href="index.html#getOff" class="discountGetOff">
-                <article class="discount">
-                    <h2 class="title">Get 25% Off</h2>
-                </article>
-            </a>
-        </section>
+        <!-- Tag GetOff -->
 
         <section class="tagGetOff">
             <a href="index.html#getOff" class="discountGetOff">
@@ -176,7 +170,7 @@
                         <div class="info">
                             <img src="img/wishlist_Icon.svg" alt="Heart icon">
                             <p class="price">Outfit.................................$499</p>
-                            <a href="" class="linkStore">Add to cart</a>
+                            <a href="views/store.html" class="linkStore">Add to cart</a>
                         </div>
                     </dic>
                 </article>
@@ -186,7 +180,7 @@
                         <div class="info">
                             <img src="img/wishlist_Icon.svg" alt="Heart icon">
                             <p class="price">Outfit.................................$499</p>
-                            <a href="" class="linkStore">Add to cart</a>
+                            <a href="views/store.html" class="linkStore">Add to cart</a>
                         </div>
                     </dic>
                 </article>
@@ -196,7 +190,7 @@
                         <div class="info">
                             <img src="img/wishlist_Icon.svg" alt="Heart icon">
                             <p class="price">Outfit.................................$499</p>
-                            <a href="" class="linkStore">Add to cart</a>
+                            <a href="views/store.html" class="linkStore">Add to cart</a>
                         </div>
                     </dic>
                 </article>
@@ -208,7 +202,7 @@
                         <div class="info">
                             <img src="img/wishlist_Icon.svg" alt="Heart icon">
                             <p class="price">Outfit.................................$499</p>
-                            <a href="" class="linkStore">Add to cart</a>
+                            <a href="views/store.html" class="linkStore">Add to cart</a>
                         </div>
                     </dic>
                 </article>
@@ -218,7 +212,7 @@
                         <div class="info">
                             <img src="img/wishlist_Icon.svg" alt="Heart icon">
                             <p class="price">Outfit.................................$499</p>
-                            <a href="" class="linkStore">Add to cart</a>
+                            <a href="views/store.html" class="linkStore">Add to cart</a>
                         </div>
                     </dic>
                 </article>
@@ -228,17 +222,17 @@
                         <div class="info">
                             <img src="img/wishlist_Icon.svg" alt="Heart icon">
                             <p class="price">Outfit.................................$499</p>
-                            <a href="" class="linkStore">Add to cart</a>
+                            <a href="views/store.html" class="linkStore">Add to cart</a>
                         </div>
                     </dic>
                 </article>
                 <article class="cardProducts m-2">
                     <dic class="article">
-                        <img src="img/pic28.webp" alt="Outfit Image" class="outFit">
+                        <img src="img/pic25.webp" alt="Outfit Image" class="outFit">
                         <div class="info">
                             <img src="img/wishlist_Icon.svg" alt="Heart icon">
                             <p class="price">Outfit.................................$499</p>
-                            <a href="" class="linkStore">Add to cart</a>
+                            <a href="views/store.html" class="linkStore">Add to cart</a>
                         </div>
                     </dic>
                 </article>
@@ -248,7 +242,7 @@
                         <div class="info">
                             <img src="img/wishlist_Icon.svg" alt="Heart icon">
                             <p class="price">Outfit.................................$499</p>
-                            <a href="" class="linkStore">Add to cart</a>
+                            <a href="views/store.html" class="linkStore">Add to cart</a>
                         </div>
                     </dic>
                 </article>
@@ -260,7 +254,7 @@
                         <div class="info">
                             <img src="img/wishlist_Icon.svg" alt="Heart icon">
                             <p class="price">Outfit.................................$499</p>
-                            <a href="" class="linkStore">Add to cart</a>
+                            <a href="views/store.html" class="linkStore">Add to cart</a>
                         </div>
                     </dic>
                 </article>
@@ -270,7 +264,7 @@
                         <div class="info">
                             <img src="img/wishlist_Icon.svg" alt="Heart icon">
                             <p class="price">Outfit.................................$499</p>
-                            <a href="" class="linkStore">Add to cart</a>
+                            <a href="views/store.html" class="linkStore">Add to cart</a>
                         </div>
                     </dic>
                 </article>
@@ -280,7 +274,7 @@
                         <div class="info">
                             <img src="img/wishlist_Icon.svg" alt="Heart icon">
                             <p class="price">Outfit.................................$499</p>
-                            <a href="" class="linkStore">Add to cart</a>
+                            <a href="views/store.html" class="linkStore">Add to cart</a>
                         </div>
                     </dic>
                 </article>
@@ -290,7 +284,7 @@
                         <div class="info">
                             <img src="img/wishlist_Icon.svg" alt="Heart icon">
                             <p class="price">Outfit.................................$499</p>
-                            <a href="" class="linkStore">Add to cart</a>
+                            <a href="views/store.html" class="linkStore">Add to cart</a>
                         </div>
                     </dic>
                 </article>
@@ -300,12 +294,12 @@
                         <div class="info">
                             <img src="img/wishlist_Icon.svg" alt="Heart icon">
                             <p class="price">Outfit.................................$499</p>
-                            <a href="" class="linkStore">Add to cart</a>
+                            <a href="views/store.html" class="linkStore">Add to cart</a>
                         </div>
                     </dic>
                 </article>
             </div>
-            <a href="../views/store.html" class="ctaStore">See more...</a>
+            <a href="views/store.html" class="ctaStore">See more...</a>
         </section>
 
         <!-- Advertising -->
@@ -329,7 +323,7 @@
                             <img src="img/skull.svg" alt="Skull logo" class="skull">
                         </label>
                         <input type="checkbox" id="new1" class="new">
-                        <a href="../views/store.html" class="smallCard">
+                        <a href="views/store.html" class="smallCard">
                             <img src="img/pic23.webp" alt="Outfit Image" class="outFit">
                             <p class="price">Outfit.................................$499</p>
                         </a>
@@ -342,7 +336,7 @@
                             <img src="img/skull.svg" alt="Skull logo" class="skull">
                         </label>
                         <input type="checkbox" id="new2" class="new">
-                        <a href="../views/store.html" class="smallCard">
+                        <a href="views/store.html" class="smallCard">
                             <img src="img/pic28.webp" alt="Outfit Image" class="outFit">
                             <p class="price">Outfit.................................$499</p>
                         </a>
@@ -355,7 +349,7 @@
                             <img src="img/skull.svg" alt="Skull logo" class="skull">
                         </label>
                         <input type="checkbox" id="new3" class="new">
-                        <a href="../views/store.html"  class="smallCard">
+                        <a href="views/store.html"  class="smallCard">
                             <img src="img/pic29.webp" alt="Outfit Image" class="outFit">
                             <p class="price">Outfit.................................$499</p>
                         </a>
@@ -368,7 +362,7 @@
                             <img src="img/skull.svg" alt="Skull logo" class="skull">
                         </label>
                         <input type="checkbox" id="new4" class="new">
-                        <a href="../views/store.html" class="smallCard">
+                        <a href="views/store.html" class="smallCard">
                             <img src="img/pic33.webp" alt="Outfit Image" class="outFit">
                             <p class="price">Outfit.................................$499</p>
                         </a>
@@ -383,7 +377,7 @@
                             <img src="img/skull.svg" alt="Skull logo" class="skull">
                         </label>
                         <input type="checkbox" id="new5" class="new">
-                        <a href="../views/store.html" class="smallCard">
+                        <a href="views/store.html" class="smallCard">
                             <img src="img/pic20.webp" alt="Outfit Image" class="outFit">
                             <p class="price">Outfit.................................$499</p>
                         </a>
@@ -396,7 +390,7 @@
                             <img src="img/skull.svg" alt="Skull logo" class="skull">
                         </label>
                         <input type="checkbox" id="new6" class="new">
-                        <a href="../views/store.html" class="smallCard">
+                        <a href="views/store.html" class="smallCard">
                             <img src="img/pic17.webp" alt="Outfit Image" class="outFit">
                             <p class="price">Outfit.................................$499</p>
                         </a>
@@ -409,7 +403,7 @@
                             <img src="img/skull.svg" alt="Skull logo" class="skull">
                         </label>
                         <input type="checkbox" id="new7" class="new">
-                        <a href="../views/store.html" class="smallCard">
+                        <a href="views/store.html" class="smallCard">
                             <img src="img/pic36.webp" alt="Outfit Image" class="outFit">
                             <p class="price">Outfit.................................$499</p>
                         </a>
@@ -422,15 +416,15 @@
                             <img src="img/skull.svg" alt="Skull logo" class="skull">
                         </label>
                         <input type="checkbox" id="new8" class="new">
-                        <div href="../views/store.html" class="smallCard">
-                            <img src="img/pic16.webp" alt="Outfit Image" class="outFit">
+                        <a href="views/store.html" class="smallCard">
+                            <img src="img/pic30.webp" alt="Outfit Image" class="outFit">
                             <p class="price">Outfit.................................$499</p>
-                        </div>
-                        <img src="img/pic16.webp" alt="Outfit Image" id="outFit" class="outFit">
+                        </a>
+                        <img src="img/pic30.webp" alt="Outfit Image" id="outFit" class="outFit">
                     </div>
                 </article>
             </div>
-            <a href="../views/store.html" class="ctaStore">See more...</a>
+            <a href="views/store.html" class="ctaStore">See more...</a>
         </section>
 
         <!-- Get 25% Off -->
