Adjustment padding NewArrivals & BestSelleres

--- a/index.html
+++ b/index.html
@@ -290,7 +290,7 @@
                 </article>
                 <article class="cardProducts m-2">
                     <dic class="article">
-                        <img src="img/pic15.webp" alt="Outfit Image" class="outFit">
+                        <img src="img/pic37.webp" alt="Outfit Image" class="outFit">
                         <div class="info">
                             <img src="img/wishlist_Icon.svg" alt="Heart icon">
                             <p class="price">Outfit.................................$499</p>
@@ -369,6 +369,19 @@
                         <img src="img/pic33.webp" alt="Outfit Image" id="outFit" class="outFit">
                     </div>
                 </article>
+                <article class="cardProducts m-0">
+                    <div class="article8">
+                        <label for="new8" class="fadeAway">
+                            <img src="img/skull.svg" alt="Skull logo" class="skull">
+                        </label>
+                        <input type="checkbox" id="new8" class="new">
+                        <a href="views/store.html" class="smallCard">
+                            <img src="img/pic30.webp" alt="Outfit Image" class="outFit">
+                            <p class="price">Outfit.................................$499</p>
+                        </a>
+                        <img src="img/pic30.webp" alt="Outfit Image" id="outFit" class="outFit">
+                    </div>
+                </article>
             </div>
             <div class="sectionCard d-flex flex-direction-row">
                 <article class="cardProducts m-0">
@@ -417,10 +430,23 @@
                         </label>
                         <input type="checkbox" id="new8" class="new">
                         <a href="views/store.html" class="smallCard">
-                            <img src="img/pic30.webp" alt="Outfit Image" class="outFit">
+                            <img src="img/pic35.webp" alt="Outfit Image" class="outFit">
                             <p class="price">Outfit.................................$499</p>
                         </a>
-                        <img src="img/pic30.webp" alt="Outfit Image" id="outFit" class="outFit">
+                        <img src="img/pic35.webp" alt="Outfit Image" id="outFit" class="outFit">
+                    </div>
+                </article>
+                <article class="cardProducts m-0">
+                    <div class="article8">
+                        <label for="new8" class="fadeAway">
+                            <img src="img/skull.svg" alt="Skull logo" class="skull">
+                        </label>
+                        <input type="checkbox" id="new8" class="new">
+                        <a href="views/store.html" class="smallCard">
+                            <img src="img/pic34.webp" alt="Outfit Image" class="outFit">
+                            <p class="price">Outfit.................................$499</p>
+                        </a>
+                        <img src="img/pic34.webp" alt="Outfit Image" id="outFit" class="outFit">
                     </div>
                 </article>
             </div>
