changed drawer Icon

--- a/index.html
+++ b/index.html
@@ -466,7 +466,8 @@
                 </div>
                 <a href="" class="cta">See more in details</a>
             </article>
-            <img src="img/hoddy_White.webp" alt="" class="hoddy">
+            <img src="img/hoddy_White.webp" alt="Hoddy pic" class="hoddy">
+
         </section>
         <!-- Gift Cards -->
 
