Adjustment Navbar Icon

--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
 
         <section class="arrowUp">
             <a href="index.html#heroSection" class="directionUp">
-                <img src="img/arrowup.svg" alt="" class="arrowUpIcon">
+                <img src="img/arrowup_Icon.svg" alt="" class="arrowUpIcon">
             </a>
         </section>
 
