--- a/index.html
+++ b/index.html
@@ -456,19 +456,53 @@
         <!-- Get 25% Off -->
 
         <section class="getOff" id="getOff">
-            <article class="info">
-                <h2 class="title">Get 25% off</h2>
-                <div class="paragraph">
-                    <h3 class="subtitle">For purchases over $1000</h3>
-                    <p class="sentence">You get 25% off on one of our
-                    hoddies
-                    </p>
+            <article class="containerGetOff">
+                <div class="info">
+                    <h2 class="title">Get 25% off</h2>
+                    <div class="paragraph">
+                        <h3 class="subtitle">For purchases over $1000</h3>
+                        <p class="sentence">You get 25% off on one of our
+                        hoddies
+                        </p>
+                    </div>
+                    <input type="checkbox" id="cross">
+                    <label for="cross">
+                        <img src="img/close_Cross_White.svg" alt="Cross Icon" class="cta">
+                    </label>
                 </div>
-                <a href="" class="cta">See more in details</a>
+                <img src="img/hoddy_White.webp" alt="Hoddy pic" class="hoddy">
             </article>
-            <img src="img/hoddy_White.webp" alt="Hoddy pic" class="hoddy">
-
+            <article class="bannerGetOff">
+                <h2 class="title">Get 25% off</h2>
+                <label for="cross">
+                    <img src="img/close_Cross_White.svg" alt="Cross Icon" class="crossCloseWhite">
+                </label>
+                <div class="slideGetOff">
+                    <div class="hoddy">
+                        <img src="img/hoddy1.webp" alt="Hoddy skull">
+                        <h3>Sold-out</h3>
+                        <p>Hoddy............................$499</p>
+                    </div>
+                    <div class="hoddy">
+                        <img src="img/hoddy2.webp" alt="Hoddy skull">
+                        <h3>Sold-out</h3>
+                        <p>Hoddy............................$499</p>
+                    </div>
+                    <div class="hoddy">
+                        <img src="img/hoddy3.webp" alt="Hoddy skull">
+                        <h3>Sold-out</h3>
+                        <p>Hoddy............................$499</p>
+                    </div>
+                    <div class="hoddy">
+                        <img src="img/hoddy4.webp" alt="Hoddy skull">
+                        <h3>In-stock</h3>
+                        <p>Hoddy............................$499</p>
+                    </div>
+                </div>
+            </article>
         </section>
+
+        </div>
         <!-- Gift Cards -->
 
         <section class="giftCards" id="giftCards">
