--- a/index.html
+++ b/index.html
@@ -465,13 +465,13 @@
                         hoddies
                         </p>
                     </div>
-                    <input type="checkbox" id="cross">
-                    <label for="cross">
-                        <img src="img/close_Cross_White.svg" alt="Cross Icon" class="cta">
-                    </label>
                 </div>
                 <img src="img/hoddy_White.webp" alt="Hoddy pic" class="hoddy">
             </article>
+            <input type="checkbox" id="cross">
+            <label for="cross">
+                <p class="ctaSentence">See more in detail</p>
+            </label>
             <article class="bannerGetOff">
                 <h2 class="title">Get 25% off</h2>
                 <label for="cross">
