--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
             <section class="menu">
                 <ul>
                     <li><a href="views/sign_In.html" class="link">Sign in</a></li>
-                    <li><a href="views/my_Cart.html" class="link">My cart</a></li>
+                    <li><a href="#" class="link">My cart</a></li>
                     <li><a href="index.html" class="link">Home</a></li>
                     <li><a href="views/store.html" class="link">Store</a></li>
                     <li><a href="index.html#giftCards" class="link">Gift cards</a></li>
