--- a/index.html
+++ b/index.html
@@ -39,10 +39,10 @@
         </a>
         <section class="menuIcons">
             <ul>
-                <li><a href=""><img class="icon" src="img/moon_Icon.svg" alt=""></a></li>
-                <li><a href=""><img class="icon" src="img/user_Icon.svg" alt=""></a></li>
-                <li><a href=""><img class="icon" src="img/whishlist_White_Icon.svg" alt=""></a></li>
-                <li><a href=""><img class="icon" src="img/empty_Shopping_Cart.svg" alt=""></a></li>
+                <li><a href="#"><img class="icon" src="img/moon_Icon.svg" alt=""></a></li>
+                <li><a href="views/sign_In.html"><img class="icon" src="img/user_Icon.svg" alt=""></a></li>
+                <li><a href="#"><img class="icon" src="img/whishlist_White_Icon.svg" alt=""></a></li>
+                <li><a href="#"><img class="icon" src="img/empty_Shopping_Cart.svg" alt=""></a></li>
             </ul>
         </section>
         <nav class="menuSide">
