Update Links Store

--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
                         <div class="info">
                             <img class="heartIcon" src="img/wishlist_Icon.svg" alt="Heart icon">
                             <p class="price">Outfit.................................$499</p>
-                            <a href="" class="linkStore">Add to cart</a>
+                            <a href="views/store.html" class="linkStore">Add to cart</a>
                         </div>
                     </dic>
                 </article>
@@ -160,7 +160,7 @@
                         <div class="info">
                             <img class="heartIcon" src="img/wishlist_Icon.svg" alt="Heart icon">
                             <p class="price">Outfit.................................$499</p>
-                            <a href="" class="linkStore">Add to cart</a>
+                            <a href="views/store.html" class="linkStore">Add to cart</a>
                         </div>
                     </dic>
                 </article>
