Update GetOff Slide

--- a/index.html
+++ b/index.html
@@ -132,11 +132,11 @@
         <!-- Tag GetOff -->
 
         <section class="tagGetOff">
-            <a href="index.html#getOff" class="discountGetOff">
-                <article class="discount">
+            <article class="discount">
+                <label for="cross">
                     <h2 class="title">Get 25% Off</h2>
-                </article>
-            </a>
+                </label>
+            </article>
         </section>
 
         <!-- Best Sellers -->
@@ -470,7 +470,7 @@
             </article>
             <input type="checkbox" id="cross">
             <label for="cross">
-                <p class="ctaSentence">See more in detail</p>
+                <p class="ctaSentence">See more in detail...</p>
             </label>
             <article class="bannerGetOff">
                 <h2 class="title">Get 25% off</h2>
@@ -502,7 +502,6 @@
             </article>
         </section>
 
-        </div>
         <!-- Gift Cards -->
 
         <section class="giftCards" id="giftCards">
