Brand raccoon & Xin the menuside & menufilter

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
             <section class="top">
                 <img class="brand" src="img/skullLogo.svg" alt="Break a Leg brand">
                 <label for="menuSide">
-                    <img class="close" src="img/close_Arrow.svg" alt="Close icon">
+                    <img class="close" src="../img/close_Cross_White.svg" alt="Close icon">
                 </label>
             </section>
             <section class="menu">
@@ -609,7 +609,7 @@
             <img class="raccoon" src="img/logo_Raccoon.svg" alt="Raccoon brand">
             <div class="developer">
                 <p>Developed and made with 💖 by Diego Marin </p>
-                <p>© 2023 Raccoon. All rights reserved.</p>
+                <p>© 2023 <span class="raccoon">Raccoon</span>. All rights reserved.</p>
                 <p> Medellin - Colombia</p>
             </div>
         </section>
